updated composer dependency

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "cmfcmf/openweathermap-php-api": "^2.2"
+        "cmfcmf/openweathermap-php-api": "^2.2",
+        "scheb/yahoo-finance-api": "^2.1"
     }
 }
